# DevilOps-Crew

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  check_db.py  check_db_container.py  check_failed_jobs.py  check_redis.py  docker-compose.yml  inspect_queue.py  presentation_slides.md  pyproject.toml  test_api_queue.py  test_execution_time.py  test_queue_status.py  test_ui_connection.py
.github/workflows/: ci.yml
docs/: CI_CD_README.md
examples/: daily_news_brief.py  topic_research.py  weekly_trends.py
reports/: .gitkeep
scripts/: validate_containers.py
src/tv_research/: __init__.py  api.py  crew.py  main.py  manage_workers.py  models.py  ui.py  worker.py
src/tv_research/config/: agents.yaml  tasks.yaml
src/tv_research/tools/: __init__.py
tests/: test_api.py
