[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tv-research"
version = "1.0.0"
description = "AI-powered research and reporting tool for TV channels"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.10",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.28.0",
    "redis>=4.5.0",
    "rq>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tv_research"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
